--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "4.7.0",
+    "@mantine/core": "3.3.5",
+    "@mantine/dates": "3.3.5",
+    "@mantine/hooks": "3.3.5",
+    "@mantine/modals": "3.3.5",
+    "@mantine/notifications": "3.3.5",
+    "@mantine/prism": "3.3.5",
+    "@mantine/rte": "3.3.5",
+    "@modulz/radix-icons": "4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "4.17.3",
+    "dayjs": "1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "9.4.5",
+    "react-redux": "7.2.6",
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
